2003-12-10 Benoit Regrain
     * gdcmHeader is now aggregating gdcmFile, and not derived into. Thus, we 
       can use a gdcmHeaderHelper to load datas
     * gdcmPython/testSuite.py : make the testSuite compliant with modifications
       made in the source code

2003-12-10 Benoit Regrain
     * Update Windows projects and .cvsignore files

2003-11-12 Jean-Pierre Roux
     *ENH  gdcmHeader constructor has one more parameter (default value : false)
           that allows the user to 'go inside' the SeQuences only
	   if he wants to.
	   gdcmElValSet:Print takes it into account

2003-11-12  Mathieu Malaterre  <Mathieu.Malaterre@creatis.insa-lyon.fr>
     *ENH: Update gdcmPython/CMakeLists
     *FIX: (gdcmHeaderHelper) GetRescale and GetSlope
     *FIX: (gdcmElValSet) char 'tag' was overiding private members (VC++)

2003-11-10 Jean-Pierre Roux
      *FIX : gdcmHeader::LoadElements is now based
             on the ListTag listElem member,
             not longer on the TagElValueHT tagHt member
      *ENH : PrintPubElVal shows (temporarily) both results,
             with the tagHt member and the listElem member.
	     (it's easier to 'see' the problems when using Printheader)

      *FIX : old private member LgrElem is now splitted into
             ReadLength   : Length actually found on disk (updated only
	                    if bug fixing is necessary), for internal
			    use only
	     UsableLength : Updated by FixFoundLength, to fix a bug
	                    or to allow Parser going on.
	     Will allow to re-write a kosher header when a SeQuence
	     with a length (not 0000) is found
      Warning : gdcmFile::Write still uses the TagHt (not ListElem)
	        because gdcmElValSet::Add does not update ListElem
		(to be written)

2003-11-07 Jean-Pierre Roux
     *FIX misstyping in Transfert Syntax name table
     *ENH gdcmHeader::FixFoundLength now allow to 'go inside' tge SeQuences
          when they have an actual length (not 0000 nor FFFFF)